# i2b-demo-python

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  justfile  pyproject.toml  repomix-output.md
.github/: PULL_REQUEST_TEMPLATE.md  auto-comment.yml  config.yml  settings.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lock-threads.yml
config/: .gitkeep
src/app/: main.py
src/app/api/v1/: endpoints.py
src/app/core/: config.py
src/app/db/: session.py
src/app/models/: item.py  job_offer.py
src/app/services/: job_offer_service.py
tests/: test_main.py
